fix: moving whilte stretching for ipad

--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -130,7 +130,7 @@
     letter-spacing: normal;
   }
   80% {
-    letter-spacing: 1vw; /* Max stretch */
+    letter-spacing: 0.5vw;
   }
   100% {
     letter-spacing: normal;
